# deepresearch

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  reflections.md  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: batch_config.json  test_config.json
deep_research_agent/: __init__.py  cli.py
deep_research_agent/agents/: base_agent.py  lead_researcher.py
deep_research_agent/agents/subagents/: citation_agent.py  llm_citation_agent.py  reviewer_agent.py  web_searcher.py
deep_research_agent/core/: config.py  logging_config.py  memory.py  template_manager.py
deep_research_agent/evaluations/: base_evaluator.py  metrics.py
deep_research_agent/evaluations/evaluators/: artifact_evaluator.py  research_evaluator.py
deep_research_agent/prompts/: research_prompts.py
deep_research_agent/templates/: plan_generation.jinja2  report_generation.jinja2  section_generation.jinja2
deep_research_agent/utils/: __init__.py  text_processing.py
evaluations/evaluators/: artifact_evaluator.py  research_evaluator.py
evaluations/results/evaluations/: detailed_results.csv
examples/: basic_usage.py
scripts/: batch_process.py  evaluate_existing.py  evaluate_reports.py  setup_venv.sh  test_research_evaluator.py
tests/: test_citation_agent.py  test_lead_researcher.py  test_llm_citation_agent.py  test_pipeline.py  test_web_searcher.py
